2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Fixed default for fast start.

	* lib/dialog.c: Added GTK_DESTROY_WITH_PARENT for dialogs.

	* src/config.cpp: Fixed View menus updates.

	* src/endpoint.cpp: Reorganised some code.

	* src/main_window.cpp: Reorganised startup sequence.

	* src/misc.cpp: Fixed gnomemeeting_log_insert. An unuseful
	mark was created there.

	* src/tools.cpp: Creates the mark when building the window.

2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Selects the first server on startup.

	* src/pref_window.cpp: Made the personal data entries larger.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp, src/gnomemeeting.cpp: Changed timeouts values.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Fixed startup sequence so that the
	GUI is created before the endpoint.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Removed unused LID keys.
	
	* src/common.h: Removed some unused widgets.
	
	* src/config.cpp: Make sure that the same device is used for player
	and recorder when Quicknet device is selectionned. Get back to normal
	devices when Quicknet is unselectionned.
	
	* src/endpoint.cpp, src/endpoint.h: Changed UpdateConfig.
	
	* src/ils.cpp: Added support for xstatus attribute.
	
	* src/lid.cpp: The device is now stored in audio_player key.
	
	* src/main_window.cpp: Added callback on idle.
	
	* src/menu.cpp: Fixed wrong indices for View.
	
	* src/pref_window.cpp: Removed unused LID widget.
	
	* src/sound_handling.cpp: Added auto-detection of LID devices.
	
	* src/urlhandler.cpp: Changed message on User Not Found.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp, src/config.cpp: Fixed widget number for DND and AA.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Added ldap_visible key to permit